Fixed text alignment

--- a/public/assets/styles/projects.css
+++ b/public/assets/styles/projects.css
@@ -165,7 +165,7 @@
     border: none;
     cursor: pointer;
     border-bottom: 3px solid var(--highlight-color);
-    box-shadow: inset;
+    text-align: left;
 }
 
 .tags {
