--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -78,7 +78,6 @@ section p {
     text-decoration: none;
     padding: 3px;
     border-bottom: 3px solid var(--highlight-color);
-    box-shadow: inset;
 }
 
 
